# Gym-Gazebo

./: .gitignore  README.md  note.txt
Robot/model/: mazecolor_laser.h5  mazecolor_laser.json  mazecolor_selection.h5  mazecolor_selection.json
Robot/script/: gazebo_turtlebot_maze_color.py  mazecolor.py
examples/ForLearn/: DeepQlearningWithEgreedy.py  Utility.py
examples/ForLearn/DQN_maze_target_v9/: old.txt
examples/turtlebot/: mazecolor_test.py  mazecolor_turtlebot_camera_dqn.py  mazecolor_turtlebot_combined_dqn.py  mazecolor_turtlebot_dqn.py  mazecolor_turtlebot_norl.py
examples/turtlebot/BK/: DeepQlearningWithEgreedy.py  Qnetwork.py  Utility.py  [BK]_runtraining_dqn_circuit2_turtlebot_lidar.py  circuit2_turtlebot_lidar_dqn.py  circuit2c_turtlebot_camera_dqn.py  dqn.py  k_gazebo_turtlebot_maze_color.py  k_mazecolor_turtlebot_camera_dqn.py  mazecolor_test.py  mazecolor_turtlebot_camera_dqn.py  mazecolor_turtlebot_dqn.py  plot_train.py  plotting.py  run.py  runtraining_dqn_circuit2_turtlebot_lidar.py  t_circuit2_turtlebot_lidar_dqn.py  test.py  train_dqn.txt  train_qlearn.txt  turtle_mazecolor_camera_dqn.h5  turtle_mazecolor_camera_dqn.json
examples/turtlebot/DQN_maze_target_v9/: old.txt
gym_gazebo/: __init__.py
gym_gazebo/Robot/ForLearn/: ExperienceReplay.py  gazebo_turtlebot_maze_color.py  mazecolor_turtlebot_dqn.py
gym_gazebo/Robot/custom/: __init__.py  (+2 more)
gym_gazebo/envs/installation/catkin_ws_b2/src/ros_image_processing/: CMakeLists.txt  package.xml
gym_gazebo/envs/installation/catkin_ws_b2/src/ros_image_processing/src/: main.cpp  testAstra.cpp
(+100 files in other folders)
